Keep existing supervised interstitial around only for committed navigations.

https://crrev.com/468591 avoided showing a supervised user interstitial over an
existing one, but that only applies to committed navigations (where spurious
callbacks can happen, and where canceling the existing interstitial might
close the tab), and actually causes weird issues for non-committed navigations.

Bug: 760986,760540,b/69306583
Change-Id: I1da6447c47855d5dbc94c09151408f1d049399c6